package modele;

public interface Observer {
    void update(Subject s);
}
